--- a/message/view/AddMessage.html
+++ b/message/view/AddMessage.html
@@ -1,13 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>添加留言</title>
-    <link rel="stylesheet" type="text/css" href="../public/css/style.css"></link>
+    <title>发表留言</title>
+    <link rel="stylesheet" type="text/css" href="../public/css/bootstrap.css">
+    </link>
+    <style>
+        textarea,
+        input {
+            width: 100%;
+        }
+    </style>
 </head>
+
 <body>
-    <div>添加留言</div>
+    <div class="header container">
+        <div class="page-header">
+            <h1><a href="/">首页</a><small>发表留言</small></h1>
+        </div>
+    </div>
+    <div class="comments container">
+        <form action="/doadd" method="post">
+            <div class="form-group">
+                <label for="input_name">名称</label>
+                <input type="text" class="form-control" name='name' required minlength="2" maxlength="10" name="name"
+                    placeholder="输入名称">
+            </div>
+            <div class="form-group">
+                <label for="input_name">内容</label>
+                <textarea class="form-control" name='content' required cols='30' rows="10" name="name"
+                    placeholder="输入名称"></textarea>
+            </div>
+            <button type="submit" class="btn btn-default">提交</button>
+        </form>
+    </div>
 </body>
+
 </html>
