--- a/message/view/index.html
+++ b/message/view/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>留言本</title>
-    <link rel="stylesheet" type="text/css" href="../public/css/style.css"></link>
+    <link rel="stylesheet" type="text/css" href="../public/css/bootstrap.css">
+    <style>
+        *{list-style: none}
+        .comments {border: 1px solid #ccc;}
+        ul{
+           padding:10px 20px;
+           margin: 0 
+        }
+        .list-group-item{padding:10px 0;border-bottom: 1px solid #ccc}
+        .list-group-item:nth-last-child(1){border-bottom-width: 0}
+    </style>
 </head>
+
 <body>
-    <div>留言板</div>
+    <div class="header container">
+        <div class="page-header">
+            <h1>留言板列表</h1>
+            <a href="./add" class="btn btn-success">发表留言</a>
+        </div>
+    </div>
+    <div class="comments container">
+        <ul class="list-group">
+            哈哈
+        </ul>
+    </div>
 </body>
+
 </html>
